2003-01-26  Toon Moene  <toon@moene.indiv.nluug.nl>
	* changes.html: Add Fortran URL.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -62,6 +62,9 @@
 <h3>Fortran</h3>
 
   <ul>
+    <li>Fortran improvements are listed in              
+    <a href="http://gcc.gnu.org/onlinedocs/g77/News.html">
+    the Fortran documentation</a>.</li>
   </ul>
 
 <h2>New Targets and Target Specific Improvements</h2>
