Update email of Michael Dupont.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -915,7 +915,7 @@ Writer's Jump Point</a> and our <a
 href="../readings.html">readings list</a>.</p>
 
 <p>Michael Dupont &lt;<a
-href="mailto:michael.dupont@mciworldcom.de">michael.dupont@mciworldcom.de</a>&gt;
+href="mailto:mdupont777@yahoo.com">mdupont777@yahoo.com</a>&gt;
 is working on this, so contact him first.</p></li>
 
 <li>Roll information in external documents into the official manual.
