Announce the new -Werror setting and strategy.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,6 +82,14 @@ to maintain and improve quality.</p>
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>January 28, 2003</b></dt>
+<dd>
+The ongoing effort to remove warnings from the GCC code base itself,
+spear-headed by Kaveh Ghazi, has paid off: For our development versions
+and snapshots, we now enable <code>-Werror</code> during a full bootstrap.
+</dd>
+
 <dt><b>January 22, 2003</b></dt>
 <dd>
 The GCC Steering Committee has named Gabriel Dos Reis as release manager for
