Mention DESTDIR support.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -299,6 +299,9 @@
     line, and define macros in the user's namespace even when strict
     ISO compliance was requested.  Integrating the preprocessor has
     cleanly solved these issues.</li>
+
+    <li>The Makefile suite now supports redirection of
+    <code>make install</code> by means of the variable <code>DESTDIR</code>.
   </ul>
 
 </body>
