--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -301,7 +301,8 @@
     cleanly solved these issues.</li>
 
     <li>The Makefile suite now supports redirection of
-    <code>make install</code> by means of the variable <code>DESTDIR</code>.
+    <code>make install</code> by means of the variable
+    <code>DESTDIR</code>.</li>
   </ul>
 
 </body>
