Start section for GCC 3.2.2.  Mention DESTDIR support.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -96,6 +96,15 @@ code compiled by GCC 3.1.1 or earlier.</p>
 
 <!-- Changes for later point releases should be added at the top. -->
 
+<h1><a name="3.2.2">GCC 3.2.2</a></h1>
+
+<h2>Miscellaneous Improvements</h2>
+  <ul>
+    <li>As of 3.2.2, the Makefile suite supports redirection of
+        <code>make install</code> by means of the <code>DESTDIR</code>
+        variable.</li>
+  </ul>
+
 <h1><a name="3.2.1">GCC 3.2.1</a></h1>
 
 <p>3.2.1 adds a new warning, <code>-Wabi</code>. This option warns when GNU
