--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -10,8 +10,7 @@
 
 <body>
 
-<h1>GCC 3.2 Release Series<br />
-Changes, New Features, and Fixes</h1>
+<h1>GCC 3.2 Release Series &mdash; Changes, New Features, and Fixes</h1>
 
 <p>The purpose of this release series is to provide a stable platform for OS
 distributors to use building their next releases.  A primary objective was
