--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>GCC 3.4 Changes, New Features, and Fixes</title>
+<title>GCC 3.4 Release Series &mdash; Changes, New Features, and Fixes</title>
 </head>
 
 <!-- GCC maintainers, please do not hesitate to update/contribute entries
@@ -9,7 +9,7 @@
 -->
 
 <body>
-<h1>GCC 3.4 Changes, New Features, and Fixes</h1>
+<h1>GCC 3.4 Release Series &mdash; Changes, New Features, and Fixes</h1>
 
 <h2>Caveats</h2>
 
