--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -9,7 +9,7 @@
 -->
 
 <body>
-<h1>GCC 3.4 Release Series &mdash; Changes, New Features, and Fixes</h1>
+<h1>GCC 3.4 Release Series<br />Changes, New Features, and Fixes</h1>
 
 <h2>Caveats</h2>
 
@@ -24,6 +24,7 @@
 <h2>General Optimizer Improvements</h2>
 
   <ul>
+    <li></li>
   </ul>
 
   
@@ -52,11 +53,13 @@
 <h3>Objective-C</h3>
 
   <ul>
+    <li></li>
   </ul>
 
 <h3>Java</h3>
 
   <ul>
+    <li></li>
   </ul>
 
 <h3>Fortran</h3>
@@ -87,6 +90,7 @@
   been declared obsolete:</p>
 
   <ul>
+    <li></li>
   </ul>
 
   <p>Also, some individual systems have been obsoleted:</p>
@@ -111,7 +115,7 @@
         command.</li>
     <li>The <code>-W</code> warning option has been renamed to
         <code>-Wextra</code>, which is more easily understood.  The older
-        spelling will be retained for backwards compatibility.
+        spelling will be retained for backwards compatibility.</li>
   </ul>
 
 </body>
