* gcj-3.3-status.html: Updated status for rhug, x86, Jacks.

--- a/htdocs/java/gcj-3.3-status.html
+++ b/htdocs/java/gcj-3.3-status.html
@@ -27,8 +27,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      Use  bgcolor="#eeaaaa" for problems
 -->
 
-<tr> <td>i686-pc-linux-gnu</td>
-     <td> &nbsp; </td>
+<tr bgcolor='#aaeeee'> <td>i686-pc-linux-gnu</td>
+     <td> Ok </td>
      <td> Tom Tromey </td>
 </tr>
 
@@ -130,8 +130,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      <td> &nbsp; </td>
 </tr>
 
-<tr> <td> <a href="http://sources.redhat.com/rhug/">rhug</a> </td>
-     <td> Problems build all archs; not gcj bug (as far as we know) </td>
+<tr bgcolor='#aaeeee'> <td> <a href="http://sources.redhat.com/rhug/">rhug</a> </td>
+     <td> ok on x86 </td>
      <td> &nbsp; </td>
 </tr>
 
@@ -140,8 +140,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      <td> &nbsp; </td>
 </tr>
 
-<tr> <td> <a href="http://www-124.ibm.com/developerworks/oss/cvs/jikes/~checkout~/jacks/jacks.html">Jacks</a> </td>
-     <td> &nbsp; </td>
+<tr bgcolor='#aaeeee'> <td> <a href="http://www-124.ibm.com/developerworks/oss/cvs/jikes/~checkout~/jacks/jacks.html">Jacks</a> </td>
+     <td> As good as we're going to be </td>
      <td> &nbsp; </td>
 </tr>
 
