--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -194,9 +194,9 @@ the web pages.</p>
 available, through
 <a href="http://sources.redhat.com/cgi-bin/cvsweb.cgi/?cvsroot=sourceware">
 cvsweb</a> and anonymous read-only CVS.  Use the same procedure
-as above, but replace the repository bits with
-<code>:pserver:anoncvs@gcc.gnu.org:/cvs/sourceware</code> and
-<code>infra</code>.</p>
+as above, but use
+<code>:pserver:anoncvs@gcc.gnu.org:/cvs/sourceware</code> for the repository
+and <code>infra</code> for the module</p>.
 
 </body>
 </html>
