--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -196,7 +196,7 @@ available, through
 cvsweb</a> and anonymous read-only CVS.  Use the same procedure
 as above, but use
 <code>:pserver:anoncvs@gcc.gnu.org:/cvs/sourceware</code> for the repository
-and <code>infra</code> for the module</p>.
+and <code>infra</code> for the module.</p>
 
 </body>
 </html>
