Mention removal of -fvolatile* flags.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -19,6 +19,9 @@
         contained in environment variables.  It was neither documented
         nor intended that environment variable paths be ignored, so
         this has been corrected.</li>
+    <li>GCC no longer accepts the options <code>-fvolatile</code>,
+	<code>-fvolatile-global</code> and <code>-fvolatile-static</code>.
+	It is unlikely that they worked correctly in any 3.x release.</li>
   </ul>
 
 <h2>General Optimizer Improvements</h2>
