Update list of changes for HP-PA port.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -182,9 +182,17 @@
 <h2>New Targets and Target Specific Improvements</h2>
 
   <ul>
-    <li>The HP-PA port now defaults to scheduling for the PA8000 series
-        of processors.  Scheduling support for the PA7300 processor has
-	been added.</li>
+    <li>The following changes have been made to the HP-PA port:
+	<ul>
+	<li>The port now defaults to scheduling for the PA8000 series
+        of processors.</li>
+	<li>Scheduling support for the PA7300 processor has been added.</li>
+	<li>The 32-bit port now supports weak symbols under HP-UX 11.</li>
+	<li>The handling of initializers and finalizers has been improved
+	under HP-UX 11.  The 64-bit port no longer uses collect2.</li>
+	<li>Dwarf2 EH support has been added to the 32-bit linux port.</li>
+	<li>ABI fixes to correct the passing of small structures by value.</li>
+	</ul></li>
     <li>The SPARC, HP-PA, SH4, and x86/pentium ports have been converted to
         use the DFA processor pipeline description.</li>
     <li>The following NetBSD configurations for the SuperH processor family
