Mention -traditional removal and C99 features.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -46,6 +46,10 @@
         caused the compiler to crash since version 3.0 and no one
         noticed until very recently.  Thus we conclude it is not in
         widespread use.)</li>
+
+    <li>The <code>-traditional</code> C compiler option has been
+        removed.  It was deprecated in 3.1 and 3.2.  (Traditional
+        preprocessing remains available.)</li>
   </ul>
 
 
@@ -106,6 +110,9 @@
 	the option is ignored to ensure that the default search order
 	for system directories and the special treatment of system header
 	files are not defeated.</li>
+
+    <li>A few more <a href="c99status.html">ISO C99 features</a> now
+        work correctly.</li>
 
     <li>A new function attribute,
         <code><a name="nonnull_attribute">nonnull</a></code>, has been added
