--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -48,7 +48,7 @@ to maintain and improve quality.</p>
 </dd>
 
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.2/">GCC 3.2.1</a> (released 2002-11-21)
+  <a href="gcc-3.2/">GCC 3.2.2</a> (released 2002-02-05)
 </dt><dd>
   Open for all maintainers; fixes for regressions only.
 </dd>
@@ -82,6 +82,12 @@ to maintain and improve quality.</p>
 <h2>News/Announcements</h2>
 
 <dl>
+
+
+<dt><b>February 05, 2003</b></dt>
+<dd>
+<a href="gcc-3.2/">GCC 3.2.2</a> has been released.
+</dd>
 
 <dt><b>January 29, 2003</b></dt>
 
