--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -122,6 +122,7 @@ you may want to check out include:</p>
   <li>gcc_latest_snapshot</li>
   <li>gcc_ss_<i>yyyymmdd</i></li>
   <li>gcc-3_3-branch</li>
+  <li>gcc_3_2_2_release</li>
   <li>gcc_3_2_1_release</li>
   <li>gcc_3_2_release</li>
   <li>gcc-3_2-branch</li>
