--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -262,7 +262,7 @@ stages of development, branch points, and releases:</p>
        |                                   GCC 3.2.1 release (Nov 19 2002)
        |                                              \
        |                                               v
-       |                                   GCC 3.2.2 release (not yet scheduled)
+       |                                   GCC 3.2.2 release (Feb 05 2003)
        v
   GCC 3.3 Stage 2 (ends Aug 15 2002)
        |
