New entry describing the gomp-branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -163,7 +163,7 @@ you may want to check out include:</p>
   to our policies concerning release branches.  All patches will be
   added to mainline CVS (for 3.4).  The branch is regularly merged
   with the GCC 3.3 branch.</li>
-  <li><a href="projects/tree-ssa/index.html">tree-ssa-20020619-branch</a></li>
+  <li><a href="projects/tree-ssa/">tree-ssa-20020619-branch</a></li>
   <li>faster-compiler-branch: This branch is for work aimed primarily
       at making GCC itself run faster.  No checkin policy has yet been
       established.  See
@@ -175,6 +175,19 @@ you may want to check out include:</p>
       updating the port to the current infrastructure.  Send patches to
       Eric Christopher &lt;<a href="mailto:echristo@redhat.com">echristo@redhat.com</a>&gt;
       and CC: &lt;<a href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>&gt;.</li>
+  <li>gomp-01-branch is a sub-branch of <a
+  href="projects/tree-ssa/">tree-ssa-20020619-branch</a> used by
+  the <a
+  href="http://savannah.nongnu.org/projects/gomp/">GOMP</a>
+  project to implement <a
+  href="http://www.openmp.org/">OpenMP</a> in GCC. The check-in
+  policies are the same as in the tree-ssa branch:  Patches
+  should be sent to <a
+  href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>
+  and marked with <code>[gomp-branch]</code> in the subject.
+  This branch is maintained by <a
+  href="mailto:dnovillo@redhat.com">Diego Novillo
+  &lt;dnovillo@redhat.com&gt;</a>.</li>
 </ul>
 
 
