New entries for 3.2.1:   alphaev68-dec-osf5.1 (Tru64 UNIX 5.1A); with test results   i386-pc-sco3.2v5.0.6   i386-pc-solaris2.9   i386-unknown-openbsd3.1   i686-pc-sco3.2v5.0.6

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -98,6 +98,16 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev68-dec-osf5.1</td>
+<td>Tru64 UNIX 5.1A</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-01/msg00556.html">3.2.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-01/msg00441.html">3.2.1</a>
+</td>
+</tr>
+
+<tr>
 <td>hppa1.1-hp-hpux11.11</td>
 <td>&nbsp;</td>
 <td>Successful:
@@ -159,10 +169,24 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-pc-sco3.2v5.0.6</td>
+<td></td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-01/msg01745.html">3.2.1</a></td>
+</tr>
+
+<tr>
 <td>i386-pc-solaris2.8</td>
 <td>binutils 2.11.2</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00963.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i386-pc-solaris2.9</td>
+<td>Solaris 9</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-01/msg01540.html">3.2.1</a></td>
 </tr>
 
 <tr>
@@ -192,6 +216,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>NetBSD 1.6</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00865.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i386-unknown-openbsd3.1</td>
+<td>OpenBSD 3.1</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00077.html">3.2.1</a></td>
 </tr>
 
 <tr>
@@ -524,9 +555,16 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-sco3.2v5.0.6</td>
-<td>SCO OpenServer 3.2 v5.0.6</td>
+<td>SCO OpenServer v5.0.6</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00985.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-sco3.2v5.0.6</td>
+<td>SCO OpenServer 5.0.6A</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00031.html">3.2.1</a></td>
 </tr>
 
 <tr>
