--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -1010,6 +1010,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
+<td>MkLinux, glibc 2.1.3, kernel 2.0.38</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-01/msg00877.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
 <td>SuSE 7.3, glibc 2.2.4, kernel 2.4.12</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01472.html">3.0.4</a></td>
