Updated release notes for GCC 3.2.2 using Joe Buck's list in XHTML format.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -97,12 +97,129 @@ code compiled by GCC 3.1.1 or earlier.</p>
 
 <h1><a name="3.2.2">GCC 3.2.2</a></h1>
 
-<h2>Miscellaneous Improvements</h2>
-  <ul>
-    <li>As of 3.2.2, the Makefile suite supports redirection of
-        <code>make install</code> by means of the <code>DESTDIR</code>
-        variable.</li>
-  </ul>
+<p>Beginning with 3.2.2, GCC's Makefile suite supports redirection of
+<code>make install</code> by means of the <code>DESTDIR</code>
+variable.  Parts of the GCC tree have featured that support long
+before, but now it is available even from the top level.</p>
+
+<p>Other than that, GCC 3.2.2 is a bug fix release only; there are no
+new features that were not present in GCC 3.2.1.</p>
+
+<h2>Bug Fixes</h2>
+
+<p>This section lists the problem reports (PRs) from GCC's bug tracking
+system (GNATS) that are known to be fixed in the 3.2.2 release. This
+list might not be complete (that is, it is possible that some PRs
+that have been fixed are not listed here).</p>
+
+<p>To learn more about a particular PR, visit the
+<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">GNATS database</a>
+and enter the PR number in the "View Problem Report" dialog box.  Then
+click the "View" button.  It's not necessary to log in to view
+reports.</p>
+
+<p>The sorting is slightly different from the GNATS categories, and some of
+the titles have been changed to make them more clear.</p>
+
+<ul>
+<li><h3>Internal Compiler Errors (multi-platform)</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=5919">5919</a>: (c++) ICE when passing variable array to template function</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7129">7129</a>: (c++) ICE with min/max assignment operators (<code>&lt;?=</code> and <code>&gt;?=</code>)</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7507">7507</a>: ICE with <code>-O2</code> when address of called function is a complicated expression</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7622">7622</a>: ICE with nested inline functions if function's address is taken</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7681">7681</a>: (fortran) ICE in <code>compensate_edge</code>, in <code>reg-stack.c</code> (also PR <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9528">9258</a>)</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8031">8031</a>: (c++) ICE in code comparing <code>typeid</code>s and casting from virtual base</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8275">8275</a>: ICE in <code>simplify_subreg</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8332">8332</a>: (c++) builtin <code>strlen</code>/template interaction causes ICE</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8372">8372</a>: (c++) ICE on explicit call of destructor</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8439">8439</a>: (c, not c++) empty struct causes ICE</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8442">8442</a>: (c++) ICE with nested template classes</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8518">8518</a>: ICE when compiling mplayer ("<code>extern inline</code>" issue)</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8615">8615</a>: (c++) ICE with out-of-range character constant template argument</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8663">8663</a>: (c++) ICE in <code>cp_expr_size</code>, at <code>cp-lang.c:307</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8799">8799</a>: (c++) ICE: error reporting routines re-entered</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9328">9328</a>: (c++) ICE with <code>typeof(X)</code> for overloaded <code>X</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9465">9465</a>: (preprocessor) <code>cpp -traditional</code> ICE on null bytes</li>
+</ul></li>
+<li><h3>C++ (compiler and library) bugs</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=47">47</a>: scoping in nested classes is broken</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=6745">6745</a>: problems with iostream rdbuf() member function</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8214">8214</a>: conversion from <code>const char*</code> const to <code>char*</code> sometimes accepted illegally</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8493">8493</a>: builtin strlen and overload resolution (same bug as <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8332">8332</a>)</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8503">8503</a>: strange behaviour of function types</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8727">8727</a>: compiler confused by inheritance from an anonymous struct</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7445">7445</a>: poor performance of <code>std::locale::classic()</code> in multi-threaded applications</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8230">8230</a>: mishandling of overflow in <code>vector&lt;T&gt;::resize</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8399">8399</a>: <code>sync_with_stdio(false)</code> breaks unformatted input</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8662">8662</a>: illegal access of private member of unnamed class is accepted</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8707">8707</a>: "make distclean" fails in <code>libstdc++-v3</code> directory</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8708">8708</a>: <code>__USE_MALLOC</code> doesn't work</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8790">8790</a>: Use of non-thread-safe <code>strtok</code> in <code>src/localename.cc</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8887">8887</a>: Bug in date formats with <code>--enable-clocale=generic</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9076">9076</a>: Call Frame Instructions are not handled correctly during unwind operation</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9151">9151</a>: <code>std::setprecision</code> limited to 16 digits when outputting a double to a stream</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9168">9168</a>: <code>codecvt&lt;char, char, mbstate_t&gt;</code> overwrites output buffers</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9269">9269</a>: libstdc++ headers: explicit specialization of function must precede its first use</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9322">9322</a>: return value of <code>basic_streambuf&lt;&gt;::getloc</code> affected by <code>locale::global</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9433">9433</a>: segfault in runtime support for <code>dynamic_cast</code></li>
+</ul></li>
+<li><h3>C and optimizer bugs</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8032">8032</a>: GCC incorrectly initializes static structs that have flexible arrays</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8639">8639</a>: simple arithmetic expression broken</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8794">8794</a>: optimization improperly eliminates certain expressions</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8832">8832</a>: traditional "<code>asm volatile</code>" code is illegally optimized</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8988">8988</a>: loop optimizer bug: with <code>-O2</code>, code is generated that segfaults (found on i386, bug present for all platforms)</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9492">9492</a>: structure copy clobbers subsequent stores to structure</li>
+</ul></li>
+<li><h3>Objective-C bugs</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9267">9267</a>: Objective-C parser won't build with newer bison versions (e.g. 1.875)</li>
+</ul></li>
+<li><h3>Ada bugs</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8344">8344</a>: Ada build problem due to conflict between <code>gcc/final.o</code>, <code>gcc/ada/final.o</code></li>
+</ul></li>
+<li><h3>Preprocessor bugs</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8524">8524</a>: <code>_Pragma</code> within macros is improperly expanded</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8880">8880</a>: <code>__WCHAR_TYPE__</code> macro incorrectly set to "<code>long int</code>" with <code>-fshort-wchar</code></li>
+</ul></li>
+<li><h3>ARM-specific</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9090">9090</a>: arm ICE with <code>&gt;= -O2</code>; regression from gcc-2.95</li>
+</ul></li>
+<li><h3>x86-specific (Intel/AMD)</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8588">8588</a>: ICE in <code>extract_insn</code>, at <code>recog.c:NNNN</code> (shift instruction)</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8599">8599</a>: loop unroll bug with <code>-march=k6-3</code></li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9506">9506</a>: ABI breakage in structure return (affects BSD and Cygwin, but not GNU/Linux)</li>
+</ul></li>
+<li><h3>FreeBSD 5.0 specific</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9484">9484</a>: GCC 3.2.1 Bootstrap failure on FreeBSD 5.0</li>
+</ul></li>
+<li><h3>RTEMS-specific</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9292">9292</a>: hppa1.1-rtems configurery problems</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9293">9293</a>: [m68k-elf/rtems] <code>config/m68k/t-crtstuff</code> bug</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9295">9295</a>: [mips-rtems] <code>config/mips/rtems.h</code> <code>init</code>/<code>fini</code> issue</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9296">9296</a>: gthr-rtems regression</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9316">9316</a>: powerpc-rtems: extending multilibs</li>
+</ul></li>
+<li><h3>HP-PA specific</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=9493">9493</a>: ICE with <code>-O2</code> when building a simple function</li>
+</ul></li>
+<li><h3>Documentation</h3>
+<ul>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7341">7341</a>: hyperlink to <code>gcov</code> in GCC documentation doesn't work</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8947">8947</a>: Please add a warning about "<code>-malign-double</code>" in docs</li>
+<li><a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=7448">7448</a>, <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view%20audit-trail&amp;pr=8882">8882</a>: typo cleanups</li>
+</ul></li>
+</ul>
 
 <h1><a name="3.2.1">GCC 3.2.1</a></h1>
 
@@ -127,7 +244,7 @@ thread-safe.</p>
 
 <h2>Bug Fixes</h2>
 
-<p>This document lists the problem reports (PRs) from GCC's bug tracking
+<p>This section lists the problem reports (PRs) from GCC's bug tracking
 system (<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">GNATS</a>) that
 are known to be fixed in the 3.2.1 release. This list might not be complete
 (that is, it is possible that some PRs that have been fixed are not listed
