Change <h1> to match other releases. Remove useless paragraph.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -9,8 +9,7 @@
 -->
 
 <body>
-
-<h1>GCC 3.2 Release Series &mdash; Changes, New Features, and Fixes</h1>
+<h1>GCC 3.2 Release Series<br/>Changes, New Features, and Fixes</h1>
 
 <p>The purpose of this release series is to provide a stable platform for OS
 distributors to use building their next releases.  A primary objective was
@@ -111,12 +110,6 @@ new features that were not present in GCC 3.2.1.</p>
 system (GNATS) that are known to be fixed in the 3.2.2 release. This
 list might not be complete (that is, it is possible that some PRs
 that have been fixed are not listed here).</p>
-
-<p>To learn more about a particular PR, visit the
-<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">GNATS database</a>
-and enter the PR number in the "View Problem Report" dialog box.  Then
-click the "View" button.  It's not necessary to log in to view
-reports.</p>
 
 <p>The sorting is slightly different from the GNATS categories, and some of
 the titles have been changed to make them more clear.</p>
