--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -114,7 +114,7 @@ release branch with the following command:</p>
 </p></blockquote>
 
 <p>By changing the <code>-r</code> argument above you can check out
-particular releases or snapshots or the latest snapshot.  
+particular releases or snapshots or the latest snapshot.  </p>
 
 <h3>Release and snapshot branches</h3>
 
@@ -180,7 +180,7 @@ particular releases or snapshots or the latest snapshot.
   <dd>Work on implementing SSA analysis and optimization for trees 
   is done in this branch.</dd>
 
-  <dt>faster-compiler-branch</dd> 
+  <dt>faster-compiler-branch</dt> 
   <dd>This branch is for work aimed primarily
   at making GCC itself run faster.  No checkin policy has yet been
   established.  See
@@ -188,7 +188,7 @@ particular releases or snapshots or the latest snapshot.
   thread</a> for discussion of possible work to be done in this
   area.</dd>
 
-  <dt>mips-3_4-rewrite-branch</dd> 
+  <dt>mips-3_4-rewrite-branch</dt> 
   <dd>This branch is for largish rewrites to the
   mips backend.  This has a long term goal of no macro instructions and
   updating the port to the current infrastructure.  Send patches to
