Document translation procedures.

--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -51,8 +51,9 @@ Also update the description of where snapshots come from in
 directory in the <code>gccadmin</code> account, to update the version
 actually called from cron.)</li>
 
-<li>Regenerate <code>gcc.pot</code> and send it to the translation
-project.</li>
+<li><a href="translation.html#regen">Regenerate
+<code>gcc.pot</code></a> and <a href="translation.html#submit">send it
+to the translation project</a>.</li>
 
 <li>Update the file <code>gcc/configure.in</code> so that
 <code>--disable-checking</code> is the default.</li>
