--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -23,6 +23,12 @@ present.</li>
 <li>Warn developers to abstain from checking in any code on the
 release branch.</li>
 
+<li><a href="translation.html#collect">Check for new message
+translations</a> and commit them to the release branch (and to
+mainline if it is the most recent release branch).  <a
+href="translation.html#regen">Regenerate
+<code>gcc.pot</code></a>.</li>
+
 <li>Roll the release using the
 <code>maintainer-scripts/gcc_release</code> script from the same
 branch as the release.  You must pass the <code>-f</code> option, to
