--- a/htdocs/gcc-3.2/index.html
+++ b/htdocs/gcc-3.2/index.html
@@ -7,18 +7,32 @@
 <body>
 
 <h1>GCC 3.2</h1>
+<p>The current release in the GCC 3.2 series is
+<a href="#3.2.2">GCC 3.2.2</a>.</p>
+<p>A detailed description of this series and its releases is given
+on the <a href="changes.html">Changes</a> page.</p>
 
-<p>November 19, 2002</p>
+<h2>Release History</h2>
 
-<p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
-developers are pleased to announce the release of GCC 3.2.1.</p>
+<dl>
+<dt><a name="3.2.2">February 5, 2003</a></dt>
+<dd><p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
+  developers are pleased to announce the release of <b>GCC 3.2.2</b>.
+  News and bugfix lists can be found in the respective
+  <a href="changes.html#3.2.2">Changes</a> section.</p></dd>
+<dt><a name="3.2.1">November 19, 2002</a></dt>
+<dd><p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
+  developers are pleased to announce the release of <b>GCC 3.2.1</b>.
+  Please take a look at the <a href="changes.html#3.2.1">Changes</a>
+  section for further information.</p></dd>
+<dt><a name="3.2">August 14, 2002</a></dt>
+<dd><p>The <a href="http://www.gnu.org/">GNU project</a> and the GCC
+  developers are pleased to announce the release of <b>GCC 3.2</b>.
+  The <a href="changes.html#3.2">Changes</a> section contains
+  important information about this release.</p></dd>
+</dl>
 
-<p>The links below still apply to GCC 3.2.1.</p>
-
-<p>August 14, 2002</p>
-
-<p>The <a href="http://www.gnu.org/">GNU project</a> and the GCC
-developers are pleased to announce the release of GCC 3.2.</p>
+<h2>References and Acknowledgements</h2>
 
 <p>GCC used to stand for the GNU C Compiler, but since the compiler
 supports several other languages aside from C, it now stands for the
